--- a/stack.cabal
+++ b/stack.cabal
@@ -222,6 +222,10 @@ library
                    , zip-archive < 0.4
                    , hpack >= 0.14.0 && < 0.15
                    , store
+                   , uuid
+                   , distribution-nixpkgs
+                   , language-nix
+                   , lens
   if os(windows)
     cpp-options:     -DWINDOWS
     build-depends:   Win32
